# finic-tasks-boilerplate

./: .gitignore  README.md  example.env  finic_config.json  finic_input.json  main.py  package-lock.json  package.json  pyproject.toml
example_task/: example_task.py
