[tool.poetry]
name = "web-automation"
version = "0.1.0"
description = ""
authors = ["Jason Fan <jason@finic.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "~3.10.12"
requests = "^2.32.3"
pydantic = "^2.9.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
finic-py = "^0.1.49"


[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
